--- a/popup.html
+++ b/popup.html
@@ -1,39 +1,22 @@
 <html>
-<head>
+  <head>
+    <link id="style" rel="stylesheet" type="text/css" href="popup.css" />
+    <script type="text/javascript" src="popup.js"></script>
+  </head>
 
-<link id="style" rel="stylesheet" type="text/css" href="popup.css" />
-
-<script type="text/javascript" src="popup.js"></script>
-
-</head>
-
-
-<body>
-
-<div>
-  <form id="form">
-    Save as: <input type="text" id="nameInput" />
-  </form>
-  <div id="incognitoMsg">Note: you can't save incognito windows.</div>
-  <ul id="savedWindowList">
-     <li id="template">
-       <span class="text">Name</span><!--
-     --><span class="delete">
-        &times;
-      </span><!--
-     --><span class="undo">
-        undo
-      </span>
-    </li>
-  </ul>
-  <div id="footer">
-    <span id="updated">
-      <img src="new.png" /> The extension has been updated (<a href="https://chrome.google.com/extensions/detail/fpfmklldfnlcblofkhdeoohfppdoejdc" target="_blank">details</a>)<br/>
-      If you like this extension, please <a href="https://chrome.google.com/extensions/detail/fpfmklldfnlcblofkhdeoohfppdoejdc" target="_blank">rate it</a>. Thanks!<br/>
-    </span>
-    Bugs or suggestions? <a href="mailto:simpleWindowSaver@nickbaum.com" target="_blank">Contact me.</a>
-  </div>
-</div>
-
-</body>
+  <body>
+    <div>
+      <form id="form">Save as: <input type="text" id="nameInput" /></form>
+      <div id="incognitoMsg">Note: you can't save incognito windows.</div>
+      <ul id="savedWindowList">
+        <li id="template">
+          <span class="text">Name</span>
+          <span class="delete"> &times; </span>
+          <span class="undo">
+            undo
+          </span>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
